--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,319 @@
-.App {
-  text-align: center;
+.block_for_cards_tm {
+  margin-top: 57px;
+  display: grid;
+  gap: 54px;
+  grid-template-columns: auto auto auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.block_card_tm {
+  width: 354px;
+  height: 520px;
+  border-radius: 12px;
+  box-sizing: border-box;
+  background-color: #FFF;
+  display: flex;
+flex-direction: column;
+cursor: pointer;
+}
+
+.block_card_tm:hover {
+  filter: drop-shadow(15px 10px 30px rgba(255, 165, 0, 0.1));
+}
+
+.img_foto_tm {
+  height: 365px;
+  width: 354px;
+  object-fit: cover;
+  border-radius: 12px 12px 0 0;
+}
+
+.block_info_tm {
+padding: 20px;
+text-align: center;
+}
+
+.tm_name {
+font-size: 20px;
+font-weight: 500;
+font-family: SF UI Display Bold !important;
+margin-bottom: 10px;
+}
+
+.tm_stage {
+font-size: 14px;
+color: #737373;
+margin-bottom: 10px;
+font-weight: 400;
+}
+
+.tm_position {
+font-size: 16px;
+color: #101010;
+}
+
+.tm_position_ruk {
+  font-size: 16px;
+  color: #FFAE00;
+  }
+
+.block_for_title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.btn_back {
+  margin-right: 26px;
+  cursor: pointer;
+}
+
+.block_for_foto {
+  width: 402px;
+  height: 512px;
+  cursor: pointer;
+}
+
+.foto_tm {
+  width: 402px;
+  height: 512px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+.block_for_info {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 80px;
+}
+
+.title_info_TM {
+  color: #101010;
+  font-size: 24px;
+  font-family: SF UI Display Bold !important;
+  margin-bottom: 20px;
+}
+
+.text_all_info {
+  display: grid;
+  grid-template-columns: 130px auto;
+  column-gap: 32px;
+}
+
+.info_tm {
+  color: #080809;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.title_info_gray {
+  font-size: 16px;
+  color: #929090;
+  line-height: 20px;
+}
+
+.all_info {
+  margin-bottom: 50px;
+}
+
+.all_awards {
+  margin-bottom: 50px;
+}
+
+.punkts_tm {
+  list-style: disc;
+  padding-left: 20px;
+}
+
+.text_info_tm {
+  height: 100px;
+}
+
+#btn_back:hover circle {
+  fill:#454544;
+}
+#btn_back:hover path {
+  stroke:#FFF;
+}
+
+.full_photo {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.full_photo img {
+  max-width: 90%;
+  max-height: 90%;
+}
+
+.block_card_tm_skeleton {
+  background-color: gray;
+  border-radius: 12px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 520px;
+  width: 354px;
+}
+
+.block_for_info_skeleton {
+  display: grid;
+  gap: 80px;
+  grid-template-columns: auto 2fr;
+}
+
+.block_for_foto_skeleton {
+  height: 512px;
+  width: 402px;
+  border-radius: 12px;
+  background-color: gray;
+}
+
+.text_all_info_skeleton {
+  height: 100px;
+  background-color: gray;
+  border-radius: 12px;
+}
+
+.block_card_tm_skeleton, .block_for_foto_skeleton, .text_all_info_skeleton {
+  --bg-size: 500%;
+  --color-one: gray;
+  --color-two: white;
+  font-size: clamp(3rem, 25vmin, 8rem);
+  background: linear-gradient(
+      100deg,
+      var(--color-one),
+      var(--color-two),
+      var(--color-one)
+    )
+    0 0 / var(--bg-size) 100%;
+  color: transparent;
+  background-clip: content-box;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .block_card_tm_skeleton, .block_for_foto_skeleton, .text_all_info_skeleton {
+    animation: move-bg 10s linear infinite;
+  }
+  @keyframes move-bg {
+    to {
+      background-position: var(--bg-size) 0;
+    }
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.hello_text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 28px;
+  color: #3F3F3E;
+  margin-top: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* Темная тема */
+
+.nightmode .block_card_tm {
+  background-color: rgba(18, 22, 28, 0.9) !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.nightmode .block_card_tm:hover {
+  box-shadow: 15px 10px 30px rgba(255, 165, 0, 0.1);
+}
+
+.nightmode .tm_position {
+  color: #FFF;
+}
+
+.nightmode .info_tm {
+  color: #FFF;
+}
+
+.nightmode .title_info_TM {
+  color: #fbbb10;
+}
+
+.nightmode #btn_back circle {
+  fill:rgba(18, 22, 28, 0.9) !important;
+}
+
+.nightmode #btn_back:hover {
+  box-shadow: 15px 10px 30px rgba(255, 165, 0, 0.1);
+}
+
+.nightmode .hello_text {
+  color: #EAECEF !important;
+}
+
+@media (max-width: 1199px) {
+  .block_for_cards_tm {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 0 !important;
+    margin-left: 20px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .btn_back {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+  .block_for_info {
+    gap: 30px;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    width: 95%;
+    margin-left: 20px;
+    justify-items: center;
+  }
+
+  .info_tm {
+    width: 95%;
+  }
+
+  .all_awards {
+    width: 90%;
+  }
+
+  .block_for_info_skeleton {
+    grid-template-columns: 1fr;
+    margin-top: 50px;
+    margin-left: 20px;
+    width: 90%;
+    justify-items: center;
+  }
+  
+  .hello_text {
+    margin-left: 20px;
+  }
+
+}
+
+@media (max-width: 500px) {
+  .block_for_cards_tm {
+    grid-template-columns: 1fr;
+    justify-items: center;
+    width: 90%;
+  }
+
+
+  .block_for_foto, .foto_tm {
+    width: 350px;
+    height: 400px;
+  }
+
+  .block_for_foto_skeleton {
+    width: 350px;
+    height: 400px;
+  }
+
+  .hello_text {
+    margin-left: 20px;
   }
 }
